2006-10-21  Akim Demaille  <akim.demaille@free.fr>

	Prepare aibo
	* src/console.cc: Use libport/utime.hh.
	* src/parser/bison/bison.mk: Compile the parser in a separate
	library, in a failed attempt to avoid -O2.
	* src/Makefile.am: Do not compile the Aibo connection kit.
	Will probably be removed later.

2006-10-21  Akim Demaille  <your.mail.here@FIXME.com>

	ChangeLog issues

2006-10-20  Type Your Name Here  <your.mail.here@FIXME.com>

	Upped libport and liburbi, small fix as a consequence

	* src/uvalue.cc: cast char*->unsigned char*.

2006-10-18  Akim Demaille  <demaille@gostai.com>

	Fix distdir issue
	* src/network/OPENR/aiboconnection.h,
	* src/network/OPENR/aiboconnection.cc: Formatting changes.
	* src/utypes.h: Use libport.hh.
	* src/Makefile.am: Move some EXTRA_DISTs to...
	* Makefile.am: here.
	* configure.ac: Use tar-ustar.

2006-10-17  Matthieu Nottale  <nottale@gostai.com>

	Replace install-sh, fix header path

	* src/parser/uparser.cc: Fix ugrammar.hh inclusion path.
	* configure.ac: Fix install-sh.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Look for pthread.h, install parts of libport.
	* src/Makefile.am: install bit of libport, since userver,h includes
	it, and is installed.  That sucks.
	* configure.ac: Use URBI_PTHREAD.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Fix path.
	* src/parser/bison/FlexLexer.h: Rename as...
	* src/parser/bison/flex-lexer.hh: this to avoid being caught
	by the installed one.
	* src/parser/uparser.h: Adjust.
	* src/parser/bison/bison.mk: Adjust.
	* src/Makefile.am: Adjust.
	lockable.h -> lockable.hh.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Update libport use.
	* src/uconnection.h: Use the new files.
	* src/userver.h: Ditto.
	* src/parser/uparser.h: Fix include path.
	Reported by Matthieu.
	* src/uconnection.cc: idem.
	* src/Makefile.am: Adjust.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Use libport/lockable.hh.
	* src/lockable.h: Remove.